Create sazerac page and add link on index
Created sazerac recipe page and added the link to the home index

These did not exist - per request.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Odin Recipes</h1>
     <ol>
         <li><a href="/odin-recipes/recipes/creme_brulee.html">Creme Brulee</a></li>
+        <li><a href="/odin-recipes/recipes/sazerac.html">Sazerac</a></li>
     </ol>
 </body>
 </html>
