Create whiskey ginger recipes
Created whiskey ginger recipe page. Added links to and from home.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ol>
         <li><a href="/odin-recipes/recipes/creme_brulee.html">Creme Brulee</a></li>
         <li><a href="/odin-recipes/recipes/sazerac.html">Sazerac</a></li>
+        <li><a href="/odin-recipes/recipes/whiskey_ginger.html">Whiskey Ginger</a></li>
     </ol>
 </body>
 </html>
