--- a/recipes/sazerac.html
+++ b/recipes/sazerac.html
@@ -20,6 +20,7 @@
         <li>3 dashes Peychaud's Bitters</li>
         <li>lemon twist for garnsih</li>
     </ul>
+    <h2>Steps</h2>
     <ol>
         <li>Gather your ingredients.</li>
         <li>Chill an old-fashined glass by filling it with ice. Let it sit while you prepare the rest of the drink.</li>
